--- a/package.json
+++ b/package.json
@@ -4,12 +4,18 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "serve": "vite preview"
+    "serve": "vite preview",
+    "start": "node server.js"
+  },
+  "engines": {
+    "node": "18"
   },
   "devDependencies": {
     "vite": "^2.0.5"
   },
   "dependencies": {
+    "express": "^4.18.2",
     "firebase": "^8.2.10"
   }
 }
+
